Mobile styling added, fixed footer mobile styling page overflow

--- a/src/components/atoms/calendar-dates/calendar-dates.module.css
+++ b/src/components/atoms/calendar-dates/calendar-dates.module.css
@@ -7,7 +7,6 @@
 
 .slideTray {
   display: flex;
-  justify-content: center;
   align-items: center;
   color: white;
   gap: 4rem;
@@ -45,4 +44,10 @@
   100% {
     opacity: 1;
   }
+}
+
+@media (min-width: 1024px) {
+  .slideTray {
+    justify-content: center;
+}
 }
