--- a/src/components/molecules/fixture-hud/fixture-hud.module.css
+++ b/src/components/molecules/fixture-hud/fixture-hud.module.css
@@ -8,12 +8,13 @@
   justify-content: space-evenly;
   align-items: center;
   top: 13%;
-  width: 40%;
+  width: 90%;
   height: 60%;
   background: #231F20;
   border-radius: 10%;
   flex-direction: column-reverse;
   z-index: 1;
+  opacity: 0.9;
 }
 
 .active {
@@ -45,4 +46,20 @@
 .exit:hover {
   color: gray;
   cursor: pointer;
+}
+
+@media (min-width: 1024px) {
+  .true {
+    display: flex;
+    position: absolute;
+    justify-content: space-evenly;
+    align-items: center;
+    top: 13%;
+    width: 40%;
+    height: 60%;
+    background: #231F20;
+    border-radius: 10%;
+    flex-direction: column-reverse;
+    z-index: 1;
+  }
 }
