--- a/src/components/molecules/game-fixtures-section/game-fixtures-section.module.css
+++ b/src/components/molecules/game-fixtures-section/game-fixtures-section.module.css
@@ -1,6 +1,6 @@
 .main {
   position: relative;
-  height: 100vh;
+  height: 85vh;
   width: 100%;
   background-color: black;
   display: flex;
@@ -64,6 +64,10 @@
 }
 
 @media (min-width: 1024px) {
+  .main {
+    height: 100vh;
+  }
+
   .years_container {
     gap: 4rem;
   }
